--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "firebase": "^10.8.1",
     "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
     "legal-code-jsonizer": "^2.0.0",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1",
-    "tailwindcss": "^3.4.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -48,6 +48,7 @@
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
